--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,11 @@
     <h1>My Cart</h1>
   </header>
 
+<% if enhanced_cart.empty? %>
+  <div class="empty-cart-message">
+      <p>Your cart is empty. <a href="/">Return to the homepage</a> to find something you love!</p>
+    </div>
+<% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -25,7 +30,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            <%= humanized_money_with_symbol(cart_subtotal_cents / 100.0) %>
           </th>
         </tr>
       </tfoot>
@@ -48,5 +53,5 @@
       <% end %>
     </div>
   </div>
-
+<% end %>
 </section>
