add sold out badge to product cards when quantity is 0

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,8 @@
 <article>
+ <% if product.quantity == 0 %>
+  <div class="soldout">Sold Out</div>
+  <% end %>
+
   <%= link_to product_path(product) do %>
     <%= image_tag product.image.thumb.url , alt: product.name %>
     <h1>
