--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+
+<div>
+  <p><strong>Total Products:</strong> <%= @product_count %></p>
+  <p><strong>Total Categories:</strong> <%= @category_count %></p>
+</div>
