--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,4 +1,3 @@
-
 <header class="<%= current_page?(root_path) ? "hero" : "hero small" %>">
   <section class="title">
     <h3>Welcome to</h3>
@@ -6,6 +5,7 @@
     <h2>Where you can find any plants!</h2>
   </section>
 </header>
+
 <nav class="navbar navbar-expand-lg navbar-dark sticky-nav">
   <div class="container">
     <a class="navbar-brand" href="<%= root_path %>">Jungle</a>
@@ -20,28 +20,16 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <%# <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          > %>
-            <%# Categories %>
-          <%# </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
-            <% Category.all.each do |category| %>
-            <li class="nav-item">
-              <%= link_to category.name, category, class: "nav-link" %>
-            </li>
-            <% end %>
-          <%# </ul>
-        </li> %>
+        <% Category.all.each do |category| %>
+          <li class="nav-item">
+            <%= link_to category.name, category, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
+
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a
@@ -59,17 +47,33 @@
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
           </ul>
         </li>
+
+        <% if current_user %>
+          <li class="nav-item">
+            <span class="nav-link">Hello, <%= current_user.first_name %>!</span>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Log Out', logout_path, method: :delete, class: 'nav-link' %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Register', register_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+
         <li class="nav-item end-0">
-          <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
-          My Cart (<%= cart.size %>) <% end %>
+          <%= link_to cart_path, class: "nav-link" do %>
+            <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
+          <% end %>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
 <script>
 (function(){
-const gnr = () => {
+  const gnr = () => {
     const uptitle = document.querySelector("section.title h3");
     const subtitle = document.querySelector("section.title h2");
     const header = document.querySelector("header.hero");
@@ -83,6 +87,5 @@ const gnr = () => {
   };
   const title = document.querySelector("header.hero");
   title.addEventListener("dblclick", gnr);
-  
-})()
-  </script>
+})();
+</script>
